@@ -14,7 +14,7 @@ int main(void)
   const char* filedir = __TEST__ "dirfile";
   const char* format = __TEST__ "dirfile/format";
   const char* data = __TEST__ "dirfile/data";
-  const char* format_data = "data RAW UINT8 1\n";
+  const char* format_data = "data RAW UINT16 1\n";
   int fd;
   const size_t len = strlen(data);
 
@@ -36,5 +36,5 @@ int main(void)
   unlink(format);
   rmdir(filedir);
 
-  return !(n == len);
+  return !(n == len / 2);
 }
